--- a/app/src/main/res/layout/activity_conf_cliente.xml
+++ b/app/src/main/res/layout/activity_conf_cliente.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.ConfClienteActivity">
+    tools:context=".Activity.ConfClienteActivity"
+    tools:showIn="@layout/activity_main_client">
 
     <!--Moldura Funcionario-->
 
@@ -308,13 +309,11 @@
         android:id="@+id/LblDescCPFCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="120dp"
         android:layout_marginRight="120dp"
-
         android:fontFamily="@font/allerstd"
         android:text="CPF"
         android:textColor="@android:color/black"
@@ -322,11 +321,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintTop_toBottomOf="@+id/EditTextAniversarioCliente"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="273dp" />
-
-
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/EditTextAniversarioCliente" />
 
     <EditText
         android:id="@+id/EditTextCPFCliente"
@@ -334,16 +330,12 @@
         android:layout_height="27dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-
         android:background="@drawable/tbx_cpf"
         android:fontFamily="@font/allerstd"
         android:textSize="16sp"
         android:textStyle="bold"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -353,7 +345,9 @@
         android:id="@+id/LblDescRGCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/allerstd"
         android:text="RG"
         android:textColor="@android:color/black"
@@ -361,10 +355,6 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EditTextNomeCliente" />
-
-        app:layout_constraintTop_toTopOf="parent" />
-        app:layout_constraintTop_toBottomOf="@+id/EditTextNomeCliente" />
-
 
     <EditText
         android:id="@+id/EditTextRGCliente"
@@ -391,9 +381,8 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/btn_salvar"
         android:fontFamily="@font/allerstd"
-        android:onClick="salvar"
         android:visibility="visible"
-
+        android:onClick="salvar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
