--- a/app/src/main/res/layout/activity_conf_funcionario.xml
+++ b/app/src/main/res/layout/activity_conf_funcionario.xml
@@ -80,7 +80,6 @@
 
     <EditText
         android:id="@+id/EditTextNomeFuncionario"
-
         android:layout_width="189dp"
         android:layout_height="27dp"
         android:layout_marginStart="16dp"
@@ -90,8 +89,7 @@
         android:src="@drawable/tbx_nome"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LblDescNome"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="9dp" />
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/LblDescAniversario"
