--- a/app/src/main/res/layout/adapter_list_clients.xml
+++ b/app/src/main/res/layout/adapter_list_clients.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/clickList">
 
     <TextView
         android:id="@+id/listNameCleint"
@@ -29,14 +30,16 @@
             android:id="@+id/listIdClient"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:layout_weight="1"
             android:onClick="openAddNewClient"
-            android:textAlignment="viewEnd"
-            android:layout_gravity="right"
             android:text="@string/qtd"
+            android:textAlignment="viewEnd"
 
             />
 
+
     </LinearLayout>
+
 
 </LinearLayout>
